--- a/src/app/demo/components/landing/landing.component.html
+++ b/src/app/demo/components/landing/landing.component.html
@@ -12,7 +12,12 @@
   <div class="align-items-center surface-0 flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2" style="top:85%">
       <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
 
-         
+        <li>
+          <a (click)="navigateToLanding()" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+              <span>Home</span>
+          </a>
+      </li>
+
           <li>
               <a (click)="router.navigate(['/workshopsf'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                   <span>Workshops</span>
@@ -70,6 +75,11 @@
                   <span>Project Evaluation</span>
               </a>
           </li>
+          <li>
+            <a (click)="router.navigate(['/about'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                <span>About</span>
+            </a>
+        </li>
       </ul>
       <!-- User account section with dropdown for authenticated users -->
       <div *ngIf="isAuthenticated" class="flex align-items-center">
