--- a/src/app/demo/components/landing/navbar/navbar.component.html
+++ b/src/app/demo/components/landing/navbar/navbar.component.html
@@ -13,6 +13,12 @@
         <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
 
            
+        <li>
+            <a (click)="navigateToLanding()" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                <span>Home</span>
+            </a>
+        </li>
+        
             <li>
                 <a (click)="router.navigate(['/workshopsf'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Workshops</span>
@@ -69,6 +75,11 @@
             <li>
                 <a (click)="router.navigate(['/landing/project-evaluation'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                     <span>Project Evaluation</span>
+                </a>
+            </li>
+            <li>
+                <a (click)="router.navigate(['/about'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                    <span>About</span>
                 </a>
             </li>
         </ul>
