--- a/src/app/demo/components/workshop/workshop-form/workshop-form.component.html
+++ b/src/app/demo/components/workshop/workshop-form/workshop-form.component.html
@@ -11,31 +11,31 @@
                         <label for="name">Workshop Name</label>
                     </span>
                 </div>
-
+                
                 <!-- Workshop Theme -->
                 <div class="field col-12">
                     <span class="p-float-label">
-                        <p-dropdown inputId="theme" [options]="themes" formControlName="theme" 
-                                   [(ngModel)]="workshopForm.value.theme" placeholder="Select Theme">
+                        <p-dropdown inputId="theme" [options]="themes" formControlName="theme"
+                                    [(ngModel)]="workshopForm.value.theme" placeholder="Select Theme">
                         </p-dropdown>
                         <label for="theme">Theme</label>
                     </span>
                 </div>
-
+                
                 <!-- Workshop Description -->
                 <div class="field col-12">
                     <span class="p-float-label">
-                        <textarea pInputTextarea id="description" formControlName="description" 
-                                 [(ngModel)]="workshopForm.value.description" rows="5"></textarea>
+                        <textarea pInputTextarea id="description" formControlName="description"
+                                  [(ngModel)]="workshopForm.value.description" rows="5"></textarea>
                         <label for="description">Description</label>
                     </span>
                 </div>
-
+                
                 <!-- Photo Upload -->
                 <div class="field col-12">
                     <div class="p-float-label file-upload-container">
-                        <p-fileUpload mode="basic" name="photo" 
-                                    accept="image/*" 
+                        <p-fileUpload mode="basic" name="photo"
+                                     accept="image/*"
                                     chooseLabel="Import Image"
                                     (onSelect)="onFileSelected($event)"
                                     [showUploadButton]="false"
@@ -44,20 +44,25 @@
                         <label></label>
                     </div>
                 </div>
-
+                
                 <!-- Image Preview -->
                 <div *ngIf="imagePreview" class="p-field">
                     <img [src]="imagePreview" alt="Image Preview" style="width: 150px; height: auto;" />
                 </div>
-
-                <!-- Buttons - Now aligned horizontally -->
+                
+                <!-- Buttons - Now with added margin between them -->
                 <div class="field col-12 flex justify-content-between">
-                    <button pButton type="button" label="Return" class="p-button grey-button" (click)="cancel()"></button>
-
-                    <button pButton type="submit" label="Save" [disabled]="!workshopForm.valid" 
-                            class="p-button-success"></button>
+                    <div>
+                        <button pButton type="button" label="Return" class="p-button grey-button mr-4" (click)="cancel()"></button>
+                    </div>
+                    
+                    <div>
+                        <button pButton type="submit" label="Save" [disabled]="!workshopForm.valid"
+                             class="p-button-success"></button>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
+    <p-toast></p-toast>
 </div>
