--- a/src/app/demo/components/workshop/workshoplist/workshoplist.component.html
+++ b/src/app/demo/components/workshop/workshoplist/workshoplist.component.html
@@ -1,23 +1,25 @@
 <div class="card">
   <!-- Wrapper for the buttons to be aligned on opposite sides -->
   <div class="flex justify-between mb-6">
-    <!-- Add New Workshop Button on the left -->
-    <button pButton 
-            label="Add New Workshop" 
-            icon="pi pi-plus"
-            class="p-button-primary"
-            routerLink="/workshops/new"></button>
-
-  
+    <div>
+      <!-- Add New Workshop Button on the left -->
+      <button pButton
+               label="Add New Workshop"
+               icon="pi pi-plus"
+              class="p-button-primary mr-4"
+              routerLink="/workshops/new"></button>
+    </div>
+      
+    <div>
+      <!-- Charts Button on the right -->
+      <button pButton
+               label="Charts"
+               icon="pi pi-chart-bar"
+               class="p-button bg-blue-500 text-white hover:bg-blue-600"
+               (click)="displayCharts = true"></button>
+    </div>
   </div>
-
-    <!-- Charts Button on the right -->
-    <button pButton 
-            label="Charts" 
-            icon="pi pi-chart-bar" 
-            class="p-button bg-blue-500 text-white hover:bg-blue-600" 
-            (click)="displayCharts = true"></button>
-            
+               
   <!-- Custom Modal for displaying charts -->
   <div class="custom-modal" *ngIf="displayCharts">
     <div class="custom-modal-content">
@@ -41,12 +43,12 @@
         <th>Actions</th>
       </tr>
     </ng-template>
-    
+        
     <ng-template pTemplate="body" let-workshop>
       <tr>
         <td>
-          <img [src]="workshop.photo || 'assets/images/placeholder-workshop.png'" 
-               class="workshop-image"
+          <img [src]="workshop.photo || 'assets/images/placeholder-workshop.png'"
+                class="workshop-image"
                alt="{{ workshop.name }} thumbnail">
         </td>
         <td>{{ workshop.name }}</td>
@@ -54,41 +56,44 @@
         <td>{{ workshop.description }}</td>
         <td>
           <div class="flex gap-4"> <!-- Increased gap between buttons -->
-            <button pButton 
-                    icon="pi pi-pencil" 
-                    class="p-button-rounded p-button-success" 
-                    [routerLink]="['/workshops', workshop.id, 'edit']"></button>
-            
-            <button pButton 
-                    icon="pi pi-trash" 
-                    class="p-button-rounded p-button-danger" 
-                    (click)="deleteWorkshop(workshop.id)"></button>
-            
+            <button pButton
+                     icon="pi pi-pencil"
+                     class="p-button-rounded p-button-success"
+                     [routerLink]="['/workshops', workshop.id, 'edit']"></button>
+                         
+            <button pButton
+                     icon="pi pi-trash"
+                     class="p-button-rounded p-button-danger"
+                     (click)="deleteWorkshop(workshop.id)"></button>
+                         
             <!-- Button to redirect to the resource list for a specific workshop -->
-            <button pButton 
-                    icon="pi pi-list" 
-                    class="p-button-rounded p-button-info" 
-                    [routerLink]="['/workshops', workshop.id, 'resources']"></button>
+            <button pButton
+                     icon="pi pi-list"
+                     class="p-button-rounded p-button-info"
+                     [routerLink]="['/workshops', workshop.id, 'resources']"></button>
           </div>
-          
+                     
           <!-- New Quiz buttons -->
           <div class="flex gap-4 mt-4"> <!-- Increased gap and margin-top for better spacing -->
-            <button pButton 
-                    icon="pi pi-question-circle" 
-                    class="p-button-rounded p-button-help" 
-                    [routerLink]="['/workshops', workshop.id, 'quizzes']"
-                    pTooltip="View quizzes" 
-                    tooltipPosition="top"></button>
-
-            <button pButton 
-                    icon="pi pi-plus" 
-                    class="p-button-rounded p-button-warning" 
-                    [routerLink]="['/workshops', workshop.id, 'quizzes', 'new']"
-                    pTooltip="Add new quiz" 
-                    tooltipPosition="top"></button>
+            <button pButton
+                     icon="pi pi-question-circle"
+                     class="p-button-rounded p-button-help"
+                     [routerLink]="['/workshops', workshop.id, 'quizzes']"
+                    pTooltip="View quizzes"
+                     tooltipPosition="top"></button>
+             
+            <button pButton
+                     icon="pi pi-plus"
+                     class="p-button-rounded p-button-warning"
+                     [routerLink]="['/workshops', workshop.id, 'quizzes', 'new']"
+                    pTooltip="Add new quiz"
+                     tooltipPosition="top"></button>
           </div>
         </td>
       </tr>
     </ng-template>
   </p-table>
+  
+  <!-- Add Toast component -->
+  <p-toast></p-toast>
 </div>
