--- a/src/app/demo/components/hackathons/hackathon-list/hackathon-list/hackathon-list.component.scss
+++ b/src/app/demo/components/hackathons/hackathon-list/hackathon-list/hackathon-list.component.scss
@@ -1,7 +1,7 @@
 /* Hackathon Cards Container */
 .hackathon-list-container {
   padding: 1.5rem;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-top: 80px;
   max-height: 700px;
@@ -19,8 +19,9 @@
 /* Individual Card Styling */
 .hackathon-item {
   position: relative;
-  background: white;
+  background: rgb(255, 255, 255);
   border-radius: 24px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -72,7 +73,7 @@
 .hackathon-type {
   position: absolute;
   top: 1rem;
-  right: 1rem;
+  left: 1rem;
   padding: 0.5rem 1rem;
   border-radius: 20px;
   font-size: 0.875rem;
