--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.scss
@@ -105,11 +105,11 @@
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 2rem;
 }
-
 .hackathon-item {
   position: relative;
   background: white;
   border-radius: 24px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   overflow: hidden;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
