--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.html
@@ -17,6 +17,13 @@
           <!-- Navigation items - centered with more space -->
           <div class="align-items-center surface-0 flex-grow-1 justify-content-center hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2" style="top:85%">
               <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
+
+                <li>
+                  <a (click)="navigateToLanding()" pRipple class="flex m-0 md:mx-5 px-0 py-3 text-900 font-medium line-height-3">
+                      <span>Home</span>
+                  </a>
+              </li>
+
                   <li>
                       <a (click)="router.navigate(['/landing-hackathons'], {fragment: 'hackathons'})" pRipple class="flex m-0 md:mx-5 px-0 py-3 text-900 font-medium line-height-3">
                           <span>Hackathons</span>
@@ -34,6 +41,7 @@
                           <span>Top Sponsors</span>
                       </a>
                   </li>
+
 
 
 
@@ -63,6 +71,13 @@
                           </ul>
                       </div>
                   </li>
+
+                  <li>
+                    <a (click)="router.navigate(['/about'])" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                        <span>About</span>
+                    </a>
+                </li>
+
               </ul>
           </div>
 
@@ -140,7 +155,6 @@
       </div>
   </div>
 </div>
-
   <div class="fixed-header">
     <div class="search-container">
       <!-- Search Input -->
