--- a/src/app/demo/components/landing/landing.component.html
+++ b/src/app/demo/components/landing/landing.component.html
@@ -19,7 +19,7 @@
               <ul class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
 
                 <li>
-                  <a (click)="navigateToLanding()" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                  <a (click)="navigateToLanding()" pRipple class="flex m-0 md:mx-5 px-0 py-3 text-900 font-medium line-height-3">
                       <span>Home</span>
                   </a>
               </li>
